Added difficulty, nswerCount, and correctAnswerCount attributes to the Question entity and updated all related functionality in the QuizService class. Refactored QuizService to replace no-arg constructors with parameterized constructors, reducing code length and improving maintainability. Renamed Option's isCorrect attribute to correct and updated its getter and setter methods accordingly.